Fix dark mode

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -5,38 +5,42 @@ layout: null
 @import url("pygment_highlights.css");
 
 :root {
-  /* config file CSS variables */
-  --page-col: {{ site.page-col | default: "#FFFFFF" }};
-  --text-col: {{ site.text-col | default: "#404040" }};
-  --link-col: {{ site.link-col | default: "#008AFF" }};
-  --hover-col: {{ site.hover-col | default: "#0085A1" }};
-  --navbar-col: {{ site.navbar-col | default: "#EAEAEA" }};
-  --navbar-text-col: {{ site.navbar-text-col | default: "#404040" }};
-  --navbar-border-col: {{ site.navbar-border-col | default: "#DDDDDD" }};
-  --footer-col: {{ site.footer-col | default: "#EAEAEA" }};
-  --footer-text-col: {{ site.footer-text-col | default: "#777777" }};
-  --footer-link-col: {{ site.footer-link-col | default: "#404040" }};
-  --footer-hover-col: {{ site.footer-hover-col | default: "#0085A1" }};
-
   /* common CSS variables */
   --body-font: 'Lora', 'Times New Roman', serif;
   --header-font: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   --mid-col: #808080;
 }
+@media not (prefers-color-scheme: dark) {
+  :root {
+    /* config file CSS variables */
+    --page-col: {{ site.page-col | default: "#FFFFFF" }};
+    --text-col: {{ site.text-col | default: "#404040" }};
+    --link-col: {{ site.link-col | default: "#008AFF" }};
+    --hover-col: {{ site.hover-col | default: "#0085A1" }};
+    --navbar-col: {{ site.navbar-col | default: "#EAEAEA" }};
+    --navbar-text-col: {{ site.navbar-text-col | default: "#404040" }};
+    --navbar-border-col: {{ site.navbar-border-col | default: "#DDDDDD" }};
+    --footer-col: {{ site.footer-col | default: "#EAEAEA" }};
+    --footer-text-col: {{ site.footer-text-col | default: "#777777" }};
+    --footer-link-col: {{ site.footer-link-col | default: "#404040" }};
+    --footer-hover-col: {{ site.footer-hover-col | default: "#0085A1" }};
+  }
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
-  --page-col: {{ site.dark-page-col | default: "#FFFFFF" }};
-  --text-col: {{ site.dark-text-col | default: "#404040" }};
-  --link-col: {{ site.dark-link-col | default: "#008AFF" }};
-  --hover-col: {{ site.dark-hover-col | default: "#0085A1" }};
-  --navbar-col: {{ site.dark-navbar-col | default: "#EAEAEA" }};
-  --navbar-text-col: {{ site.dark-navbar-text-col | default: "#404040" }};
-  --navbar-border-col: {{ site.dark-navbar-border-col | default: "#DDDDDD" }};
-  --footer-col: {{ site.dark-footer-col | default: "#EAEAEA" }};
-  --footer-text-col: {{ site.dark-footer-text-col | default: "#777777" }};
-  --footer-link-col: {{ site.dark-footer-link-col | default: "#404040" }};
-  --footer-hover-col: {{ site.dark-footer-hover-col | default: "#0085A1" }};
+    --page-col: {{ site.dark-page-col | default: "#FFFFFF" }};
+    --text-col: {{ site.dark-text-col | default: "#404040" }};
+    --link-col: {{ site.dark-link-col | default: "#008AFF" }};
+    --hover-col: {{ site.dark-hover-col | default: "#0085A1" }};
+    --navbar-col: {{ site.dark-navbar-col | default: "#EAEAEA" }};
+    --navbar-text-col: {{ site.dark-navbar-text-col | default: "#404040" }};
+    --navbar-border-col: {{ site.dark-navbar-border-col | default: "#DDDDDD" }};
+    --footer-col: {{ site.dark-footer-col | default: "#EAEAEA" }};
+    --footer-text-col: {{ site.dark-footer-text-col | default: "#777777" }};
+    --footer-link-col: {{ site.dark-footer-link-col | default: "#404040" }};
+    --footer-hover-col: {{ site.dark-footer-hover-col | default: "#0085A1" }};
+  }
 }
 /* --- General --- */
 
